Added 'player' cpp and header files; updated 'animatedsprite' cpp and header files, sprite.h, game.h

--- a/SDL Tutorial/SDL Tutorial.vcxproj.filters
+++ b/SDL Tutorial/SDL Tutorial.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="Source\src\sprite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\src\animatedsprite.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\src\player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\headers\graphics.h">
@@ -258,6 +264,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\headers\globals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\headers\animatedsprite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\headers\player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
