--- a/SDL Tutorial/SDL Tutorial.vcxproj
+++ b/SDL Tutorial/SDL Tutorial.vcxproj
@@ -119,10 +119,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\src\animatedsprite.cpp" />
     <ClCompile Include="Source\src\game.cpp" />
     <ClCompile Include="Source\src\graphics.cpp" />
     <ClCompile Include="Source\src\input.cpp" />
     <ClCompile Include="Source\src\main.cpp" />
+    <ClCompile Include="Source\src\player.cpp" />
     <ClCompile Include="Source\src\sprite.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -197,10 +199,12 @@
     <ClInclude Include="SDL2-2.0.4\include\SDL_types.h" />
     <ClInclude Include="SDL2-2.0.4\include\SDL_version.h" />
     <ClInclude Include="SDL2-2.0.4\include\SDL_video.h" />
+    <ClInclude Include="Source\headers\animatedsprite.h" />
     <ClInclude Include="Source\headers\game.h" />
     <ClInclude Include="Source\headers\globals.h" />
     <ClInclude Include="Source\headers\graphics.h" />
     <ClInclude Include="Source\headers\input.h" />
+    <ClInclude Include="Source\headers\player.h" />
     <ClInclude Include="Source\headers\sprite.h" />
   </ItemGroup>
   <ItemGroup>
