--- a/SDL Tutorial/SDL Tutorial.vcxproj.filters
+++ b/SDL Tutorial/SDL Tutorial.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Source\src\player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\src\level.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\headers\graphics.h">
@@ -270,6 +273,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\headers\player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\headers\level.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
