--- a/SDL Tutorial/SDL Tutorial.vcxproj.filters
+++ b/SDL Tutorial/SDL Tutorial.vcxproj.filters
@@ -373,5 +373,8 @@
     <Image Include="content\sprites\MyChar.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="content\backgrounds\bkBlue.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
