Drew 'PrtCave' level in Tiled; added TinyXML2 cpp and header files

--- a/SDL Tutorial/SDL Tutorial.vcxproj.filters
+++ b/SDL Tutorial/SDL Tutorial.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Source\src\level.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\src\xmltest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\headers\graphics.h">
@@ -276,6 +279,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\headers\level.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\headers\tinyxml2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
