--- a/SDL Tutorial/SDL Tutorial.vcxproj
+++ b/SDL Tutorial/SDL Tutorial.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="Source\src\main.cpp" />
     <ClCompile Include="Source\src\player.cpp" />
     <ClCompile Include="Source\src\sprite.cpp" />
+    <ClCompile Include="Source\src\xmltest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDL2-2.0.4\include\begin_code.h" />
@@ -208,6 +209,7 @@
     <ClInclude Include="Source\headers\level.h" />
     <ClInclude Include="Source\headers\player.h" />
     <ClInclude Include="Source\headers\sprite.h" />
+    <ClInclude Include="Source\headers\tinyxml2.h" />
   </ItemGroup>
   <ItemGroup>
     <Object Include="Debug\game.obj" />
