--- a/SDL Tutorial/SDL Tutorial.vcxproj.filters
+++ b/SDL Tutorial/SDL Tutorial.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Source\src\xmltest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\src\tile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\headers\graphics.h">
@@ -282,6 +285,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\headers\tinyxml2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\headers\tile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
